# Fish

./: .gitignore  CMakeLists.txt  MANUAL.md  README.md
.github/workflows/: cmake_ctest.yml
Docs/: BUILDING.md  MANUAL.md  lame-notes.md
Source/: BinaryData.h  LookAndFeel.h  MP3Processor.cpp  MP3Processor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RingBuffer.h  downsampler.h  upsampler.h
Source/filterCalc/: FilterCalc.cpp  FilterCalc.h
Source/lib/lame/: Makefile.MSVC  Makefile.unix  config.status  configure  configure_WINDOWS  hi.c
Source/lib/lame/Dll/: BladeMP3EncDLL.c
Source/lib/lame/frontend/: lame
Source/lib/lame/include/: lame.h
Source/lib/lame/libmp3lame/: Makefile.am  Makefile.in  bitstream.c  encoder.h  lame.c  lame_global_flags.h  libmp3lame.la  quantize.c  util.h
Source/lib/lame/libmp3lame/.deps/: quantize.Plo
Source/lib/lame/libmp3lame/vector/: liblamevectorroutines.la
Source/lib/lame/mpglib/: libmpgdecoder.la
Tests/: Benchmarks.cpp  PluginBasics.cpp
